--- a/src/styles/base/_reset.css
+++ b/src/styles/base/_reset.css
@@ -61,14 +61,6 @@ a { text-decoration: none; color: inherit }
 
 /*
  *
- * 4. Buttons
- *
- */
-
-/* ... */
-
-/*
- *
  * 5. Lists
  *
  */
@@ -86,13 +78,39 @@ li > ol, li > ul { margin-bottom: 0 }
 
 input,
 textarea {
+  border: 0;
+  border-radius: 0;
+  background-color: transparent;
+  padding: 0;
   appearance: none;
   /* Fixes vertical alignment issues in iOS (don't add a specific line height to inputs): */
-  line-height: normal
+  line-height: normal;
+  font-size: inherit;
+  /*font-size: 100%;*/
 }
+
+/* Solves placeholder's being invisible in some browsers bc of Tailwind's preflight styles */
+input::placeholder,
+textarea::placeholder { @apply .o-100 .black-50 }
 
 /* Reset Chrome and Firefox behaviour which sets a 'min-width: min-content;' on fieldsets: */
 fieldset { min-width: 0; border: 0 }
+
+/* 
+
+Override Firefox's premature red box-shadow styling for invalid form inputs
+
+- see: https://stackoverflow.com/questions/5939341/firefox-4-is-there-a-way-to-remove-the-red-border-in-a-required-form-input 
+- see: https://stackoverflow.com/questions/3809146/firefox-4-required-input-form-red-border-outline
+
+*/
+input:-moz-placeholder,
+input:focus,
+input:invalid { box-shadow: none !important; }
+
+textarea:-moz-placeholder,
+textarea:focus,
+textarea:invalid { box-shadow: none !important; }
 
 /*
  *
@@ -113,7 +131,7 @@ table {
  */
 
 /* Remove tap highlight on iOS */
-/*
+
 input,
 textarea,
 button,
@@ -121,4 +139,3 @@ select,
 label,
 a,
 ul { -webkit-tap-highlight-color: rgba(0,0,0,0) }
-*/
