--- a/src/styles/plugins/examples/_react-slick.css
+++ b/src/styles/plugins/examples/_react-slick.css
@@ -25,30 +25,19 @@
   vertical-align: middle;
 }
 
-/*
- *
- * 6. Other styling
- *
- */
-
-.slick-track { background-color: rgba(255, 255, 255, .7)}
-
-
-
-
 /* 
  *
  * General 
  *
  */
 
-/* .slick-track
-  display: flex !important */
+.slick-track { display: flex !important }
 
 
-/* .slick-slide
-  display: flex !important
-  height: auto !important */
+.slick-slide {
+  display: flex !important;
+  height: auto !important;
+}
 
 
 /* .slick-list
