--- a/src/styles/utilities/_transform-origin.css
+++ b/src/styles/utilities/_transform-origin.css
@@ -9,4 +9,5 @@
   .origin-right  { transform-origin: right }
   .origin-bottom { transform-origin: bottom }
   .origin-left   { transform-origin: left }
+  .origin-center { transform-origin: center }
  }
