--- a/src/styles/plugins/examples/_react-modal.css
+++ b/src/styles/plugins/examples/_react-modal.css
@@ -13,13 +13,15 @@ NOTEs:
 1. Set closeTimeoutMS prop to the total MS needed to complete exit animations 
 2. Scope classes below (by adding a label class to the className and overlayClassName props) to avoid clashing with other libraries that use react-modal (like react-image-lightbox)
 
+TODO: Make sure to scope all style to avoid conflicting with react-image-lightbox (which uses react-modal).
+
 */
 
 /* 
  * Overlay: in/out transitions 
  */
 
-
+/*
 .ReactModal__Overlay { @apply .z-max .bg-transparent !important }
 
 .ReactModal__Overlay--after-open {
@@ -31,13 +33,13 @@ NOTEs:
   @apply .bg-transparent !important;
   transition: background-color 0.3s ease-in-out 0.4s;
 }
-
+*/
 
 /* 
  * Content: in/out transitions 
  */
 
-
+/*
 .ReactModal__Content {
   opacity: 0;
   transform: scale(0);
@@ -52,4 +54,25 @@ NOTEs:
 .ReactModal__Content--before-close {
   opacity: 0;
   transform: scale(0);
+}
+*/
+
+/* 
+ * Menu Modal (for BurgerAndOverlay)
+ */
+
+.menu-modal-overlay.ReactModal__Overlay { z-index: 10000 !important }
+
+.menu-modal-content.ReactModal__Content {
+  transform: translateX(100%);
+  /* See: http://easings.net/*/
+  transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.menu-modal-content.ReactModal__Content--after-open {
+  transform: translateX(0%);
+}
+
+.menu-modal-content.ReactModal__Content--before-close {
+  transform: translateX(100%);
 }
