Added flickity slider with the equal height cells hack working

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,9 @@
 @import './plugins/react-slick';
 */
 
+@import '../../node_modules/flickity/dist/flickity.min.css';
+@import './plugins/examples/react-flickity-component';
+
 @import '../../node_modules/react-image-lightbox/style.css';
 @import './plugins/examples/react-image-lightbox'; 
 
