--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,10 +15,8 @@
  *
  */
 
-/*
 @import '../../node_modules/slick-carousel/slick/slick.css';
-@import './plugins/react-slick';
-*/
+@import './plugins/examples/react-slick';
 
 @import '../../node_modules/flickity/dist/flickity.min.css';
 @import './plugins/examples/react-flickity-component';
