--- a/src/styles/base/_reset.css
+++ b/src/styles/base/_reset.css
@@ -28,10 +28,11 @@ body {
   @media (--sm) { font-size: 1.05rem }
     
   /* Font-smoothing */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  -moz-font-feature-settings: "liga" on;
+  /* See: https://css-tricks.com/understanding-web-fonts-getting */
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
+  /* text-rendering: optimizeLegibility; */
+  /* -moz-font-feature-settings: "liga" on; */
 }
 
 /* 
@@ -78,11 +79,12 @@ li > ol, li > ul { margin-bottom: 0 }
 
 input,
 textarea {
+  appearance: none;
   border: 0;
   border-radius: 0;
   background-color: transparent;
   padding: 0;
-  appearance: none;
+
   /* Fixes vertical alignment issues in iOS (don't add a specific line height to inputs): */
   line-height: normal;
   font-size: inherit;
