--- a/src/styles/utilities/_height.css
+++ b/src/styles/utilities/_height.css
@@ -19,35 +19,115 @@ Adapted from: http://tachyons.io/docs/layout/heights/
   .h8 { height: var(--sizing-8) }
   .h9 { height: var(--sizing-9) }
 
+  .h-0       { height: 0 }
   .h-auto    { height: auto }
   .h-inherit { height: inherit }
 
-  /* 
+  .mh1 { max-height: var(--sizing-1) }
+  .mh2 { max-height: var(--sizing-2) }
+  .mh3 { max-height: var(--sizing-3) }
+  .mh4 { max-height: var(--sizing-4) }
+  .mh5 { max-height: var(--sizing-5) }
+  .mh6 { max-height: var(--sizing-6) }
+  .mh7 { max-height: var(--sizing-7) }
+  .mh8 { max-height: var(--sizing-8) }
+  .mh9 { max-height: var(--sizing-9) }
+
+  .mh-none { max-height: none }
+
+ /* 
   * 
   * Percentage of parent height
   *
   */
 
+  .h-10  { height: 10% }
+  .h-20  { height: 20% }
   .h-25  { height: 25% }
+  .h-30  { height: 30% }
+  .h-40  { height: 40% }
   .h-50  { height: 50% }
+  .h-60  { height: 60% }
+  .h-70  { height: 70% }
   .h-75  { height: 75% }
+  .h-80  { height: 80% }
+  .h-90  { height: 90% }
   .h-100 { height: 100% }
+
+  .h-third      { height: calc(100% / 3) }
+  .h-two-thirds { height: calc(100% / 1.5) }
+
+  .mh-10  { max-height: 10% }
+  .mh-20  { max-height: 20% }
+  .mh-25  { max-height: 25% }
+  .mh-30  { max-height: 30% }
+  .mh-40  { max-height: 40% }
+  .mh-50  { max-height: 50% }
+  .mh-60  { max-height: 60% }
+  .mh-70  { max-height: 70% }
+  .mh-75  { max-height: 75% }
+  .mh-80  { max-height: 80% }
+  .mh-90  { max-height: 90% }
+  .mh-100 { max-height: 100% }
+
+  .mh-third      { max-height: calc(100% / 3) }
+  .mh-two-thirds { max-height: calc(100% / 1.5) }
 
   .min-h-100 { min-height: 100% }
   .max-h-100 { max-height: 100% }
 
-  /* 
+ /* 
   * 
   * Percentage of viewport height
   *
   */
 
+  .vh-10  { height: 10vh }
+  .vh-20  { height: 20vh }
   .vh-25  { height: 25vh }
+  .vh-30  { height: 30vh }
+  .vh-40  { height: 40vh }
   .vh-50  { height: 50vh }
+  .vh-60  { height: 60vh }
+  .vh-70  { height: 70vh }
   .vh-75  { height: 75vh }
+  .vh-80  { height: 80vh }
+  .vh-90  { height: 90vh }
   .vh-100 { height: 100vh }
 
-  .min-vh-100 { min-height: 100vh }
+  .vh-third      { height: calc(100vh / 3) }
+  .vh-two-thirds { height: calc(100vh / 1.5) }
+
+  .max-vh-10  { max-height: 10vh }
+  .max-vh-20  { max-height: 20vh }
+  .max-vh-25  { max-height: 25vh }
+  .max-vh-30  { max-height: 30vh }
+  .max-vh-40  { max-height: 40vh }
+  .max-vh-50  { max-height: 50vh }
+  .max-vh-60  { max-height: 60vh }
+  .max-vh-70  { max-height: 70vh }
+  .max-vh-75  { max-height: 75vh }
+  .max-vh-80  { max-height: 80vh }
+  .max-vh-90  { max-height: 90vh }
   .max-vh-100 { max-height: 100vh }
+
+  .max-vh-third      { max-height: calc(100vh / 3) }
+  .max-vh-two-thirds { max-height: calc(100vh / 1.5) }
+
+  .min-vh-10  { min-height: 10vh }
+  .min-vh-20  { min-height: 20vh }
+  .min-vh-25  { min-height: 25vh }
+  .min-vh-30  { min-height: 30vh }
+  .min-vh-40  { min-height: 40vh }
+  .min-vh-50  { min-height: 50vh }
+  .min-vh-60  { min-height: 60vh }
+  .min-vh-70  { min-height: 70vh }
+  .min-vh-75  { min-height: 75vh }
+  .min-vh-80  { min-height: 80vh }
+  .min-vh-90  { min-height: 90vh }
+  .min-vh-100 { min-height: 100vh }
+
+  .min-vh-third      { min-height: calc(100vh / 3) }
+  .min-vh-two-thirds { min-height: calc(100vh / 1.5) }
 
 }
