--- a/src/styles/utilities/_width.css
+++ b/src/styles/utilities/_width.css
@@ -22,6 +22,7 @@ Adapted from:
   .w9 { width: var(--sizing-9) }
 
   .w-auto { width: auto }
+  .w-0    { width: 0 }
 
   .mw1 { max-width: var(--sizing-1) }
   .mw2 { max-width: var(--sizing-2) }
@@ -73,20 +74,61 @@ Adapted from:
   .mw-third      { max-width: calc(100% / 3) }
   .mw-two-thirds { max-width: calc(100% / 1.5) }
 
-  .min-w-100 { min-width: 100%; }
+  .min-w-100 { min-width: 100% }
+  .max-w-100 { max-width: 100% }
 
-  /* 
+ /* 
   * 
   * Percentage of viewport width
   *
   */
 
+  .vw-10  { width: 10vw }
+  .vw-20  { width: 20vw }
   .vw-25  { width: 25vw }
+  .vw-30  { width: 30vw }
+  .vw-40  { width: 40vw }
   .vw-50  { width: 50vw }
+  .vw-60  { width: 60vw }
+  .vw-70  { width: 70vw }
   .vw-75  { width: 75vw }
+  .vw-80  { width: 80vw }
+  .vw-90  { width: 90vw }
   .vw-100 { width: 100vw }
 
-  .min-vw-100 { min-width: 100vw }
+  .vw-third      { width: calc(100vw / 3) }
+  .vw-two-thirds { width: calc(100vw / 1.5) }
+
+  .max-vw-10  { max-width: 10vw }
+  .max-vw-20  { max-width: 20vw }
+  .max-vw-25  { max-width: 25vw }
+  .max-vw-30  { max-width: 30vw }
+  .max-vw-40  { max-width: 40vw }
+  .max-vw-50  { max-width: 50vw }
+  .max-vw-60  { max-width: 60vw }
+  .max-vw-70  { max-width: 70vw }
+  .max-vw-75  { max-width: 75vw }
+  .max-vw-80  { max-width: 80vw }
+  .max-vw-90  { max-width: 90vw }
   .max-vw-100 { max-width: 100vw }
+
+  .max-vw-third      { max-width: calc(100vw / 3) }
+  .max-vw-two-thirds { max-width: calc(100vw / 1.5) }
+
+  .min-vw-10  { min-width: 10vw }
+  .min-vw-20  { min-width: 20vw }
+  .min-vw-25  { min-width: 25vw }
+  .min-vw-30  { min-width: 30vw }
+  .min-vw-40  { min-width: 40vw }
+  .min-vw-50  { min-width: 50vw }
+  .min-vw-60  { min-width: 60vw }
+  .min-vw-70  { min-width: 70vw }
+  .min-vw-75  { min-width: 75vw }
+  .min-vw-80  { min-width: 80vw }
+  .min-vw-90  { min-width: 90vw }
+  .min-vw-100 { min-width: 100vw }
+
+  .min-vw-third      { min-width: calc(100vw / 3) }
+  .min-vw-two-thirds { min-width: calc(100vw / 1.5) }
 
 }
