--- a/src/styles/utilities/_z-index.css
+++ b/src/styles/utilities/_z-index.css
@@ -16,7 +16,11 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_z-index.
   .z-3    { z-index: 3 }
   .z-4    { z-index: 4 }
   .z-5    { z-index: 5 }
+  .z-6    { z-index: 6 }
+  .z-7    { z-index: 7 }
+  .z-8    { z-index: 8 }
   .z-9    { z-index: 9 }
+  .z-10    { z-index: 10 }
   .z-99   { z-index: 99 }
   .z-999  { z-index: 999 }
   .z-9999 { z-index: 9999 }
