--- a/src/styles/utilities/_line-height.css
+++ b/src/styles/utilities/_line-height.css
@@ -9,6 +9,7 @@ Adapted from: http://tachyons.io/docs/typography/line-height
 
 @variants responsive, hover, focus, group-hover {
 
+  .lh-none  { line-height: 0 }
   .lh-solid { line-height: 1 }
   .lh-title { line-height: 1.25 }
   .lh-copy  { line-height: 1.5 }
