--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,149 +1,12 @@
 /*
  *
- * Base
+ * Main CSS file
  *
  */
 
-@import './base/tailwind-preflight';
-@import './base/reset';
-@import './base/a11y';
-@import './base/font-face';
-
-/*
- *
- * Plugins
- *
- */
-
-@import '../../node_modules/slick-carousel/slick/slick.css';
-@import './plugins/examples/react-slick';
-
-@import '../../node_modules/flickity/dist/flickity.min.css';
-@import './plugins/examples/react-flickity-component';
-
-@import '../../node_modules/react-image-lightbox/style.css';
-@import './plugins/examples/react-image-lightbox'; 
-
-@import './plugins/examples/react-modal';
-/*
-@import './plugins/lightbox-react';
-@import './plugins/twitter-fetcher';
-*/
-
-/*
- *
- * New styles (TODO: add to Gatsby starter for future projects)
- *
- */
-
+@import './base/index';
+@import './plugins/index';
+@import './components/index';
+@import './supports/index';
+@import './utilities/index';
 @import './new';
-
-/*
- *
- * Components
- *
- */
-
-@import './components/components';
-@import './components/examples/arrows';
-@import './components/examples/burger';
-
-/*
- *
- * Supports
- *
- */
-
-@import './supports/grid.css';
-
-/*
- *
- * Utilities
- *
- */
-
-/* Animations */
-@import './utilities/animation';
-
-/* Backgrounds */
-@import './utilities/background-attachment';
-@import './utilities/background-color';
-@import './utilities/background-position';
-@import './utilities/background-repeat';
-@import './utilities/background-size';
-
-/* Borders & outlines */
-@import './utilities/border';
-@import './utilities/border-color';
-@import './utilities/border-radius';
-@import './utilities/border-style';
-@import './utilities/border-width';
-@import './utilities/outline';
-
-/* Box shadow */
-@import './utilities/box-shadow';
-
-/* CMS */
-@import './utilities/cms';
-
-/* Images */
-@import './utilities/object-fit';
-@import './utilities/object-position';
-
-/* Interactivity */
-@import './utilities/cursor';
-@import './utilities/hide-child';
-
-/* Layout */
-@import './utilities/columns';
-@import './utilities/display';
-@import './utilities/flexbox';
-@import './utilities/floats';
-@import './utilities/position';
-@import './utilities/z-index';
-
-/* Sizing */
-@import './utilities/aspect-ratio';
-@import './utilities/height';
-@import './utilities/overflow';
-@import './utilities/width';
-
-/* Spacing */
-@import './utilities/margins';
-@import './utilities/negative-margins';
-@import './utilities/padding';
-
-/* SVG */
-@import './utilities/svg';
-
-/* Tables */
-@import './utilities/tables';
-
-/* Transforms */
-@import './utilities/rotation';
-@import './utilities/transform-origin';
-@import './utilities/translate';
-
-/* Typography */
-@import './utilities/color';
-@import './utilities/font-family';
-@import './utilities/font-size';
-@import './utilities/font-style';
-@import './utilities/font-weight';
-@import './utilities/letter-spacing';
-@import './utilities/line-height';
-@import './utilities/line-wrapping';
-@import './utilities/text-align';
-@import './utilities/vertical-align';
-
-/* Visibility */
-@import './utilities/opacity';
-@import './utilities/visibility';
-
-/* Variables (import here to override any variables above) */
-@import './base/variables';
-
-/* Debug */
-@import './utilities/debug-children';
-@import './utilities/debug-grid';
-/* @import './utilities/debug'; */
