--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -1,6 +1,12 @@
 /*
  *
- * Base
+ * Main CSS file
+ *
+ */
+
+/*
+ *
+ * Base styles
  *
  */
 
@@ -945,7 +951,7 @@ textarea:focus {
 
 /*
  *
- * Plugins
+ * Plugin Styles (vendor + custom)
  *
  */
 
@@ -1905,350 +1911,15 @@ TODO: Make sure to scope all style to avoid conflicting with react-image-lightbo
 }
 
 /*
-@import './plugins/lightbox-react';
-@import './plugins/twitter-fetcher';
-*/
-
-/*
- *
- * New styles (TODO: add to Gatsby starter for future projects)
- *
- */
-
-/*
-
-NEW STYLES
-==========
-
-Add all new styles here (reset, plugin, utility, component) so they are easy to add to the Gatsby Starter project.
-
-*/
-
-/*
- *
- * Components
- *
- */
-
-/* 
-
-See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patterns-with-apply
-
+@import './lightbox-react';
+@import './twitter-fetcher';
 */
 
 /*
 
-Classes to style the <Quote /> component
+Component classes
 
 */
-
-.quote {
-  max-width: 66ch;
-  line-height: 1.5;
-}
-
-.quote-source {
-  display: inline-flex;
-  padding-top: .5rem;
-  padding-top: var(--spacing-2);
-  font-style: normal;
-}
-
-.quote-link {
-  color: #357edd;
-  color: var(--blue);
-}
-
-/* 
- *
- * Buttons
- *
- */
-
-.btn {
-  border-width: .125rem;
-  border-width: var(--border-width-1);
-  border-color: #000;
-  border-color: var(--black);
-  background-color: #000;
-  background-color: var(--black);
-  color: #ff80cc;
-  color: var(--pink);
-  padding-top: .5rem;
-  padding-top: var(--spacing-2);
-  padding-bottom: .5rem;
-  padding-bottom: var(--spacing-2);
-  padding-left: 1rem;
-  padding-left: var(--spacing-3);
-  padding-right: 1rem;
-  padding-right: var(--spacing-3);
-  line-height: 1;
-  text-transform: uppercase;
-  letter-spacing: .1em;
-  transition: all .2s ease-in-out;
-}
-
-.btn:hover {
-  background-color: #ff80cc;
-  background-color: var(--pink);
-  color: #000;
-  color: var(--black);
-}
-
-@media (min-width: 36em) {
-  .btn {
-    font-size: 1.25rem;
-    font-size: var(--font-size-4);
-  }
-}
-
-/* 
- *
- * Containers
- *
- */
-
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 1rem;
-  padding-left: var(--spacing-3);
-  padding-right: 1rem;
-  padding-right: var(--spacing-3);
-  max-width: 64rem;
-  max-width: var(--sizing-8);
-}
-
-@media (min-width: 48em) {
-  .container {
-    padding-left: 2rem;
-    padding-left: var(--spacing-4);
-    padding-right: 2rem;
-    padding-right: var(--spacing-4);
-  }
-}
-
-@media (min-width: 62em) {
-  .container {
-    padding-left: 4rem;
-    padding-left: var(--spacing-5);
-    padding-right: 4rem;
-    padding-right: var(--spacing-5);
-  }
-}
-
-.container {
-  /*
- @supports (display: grid) { @apply .mw9 }
- */
-}
-
-.container-not-centered {
-  padding-left: 1rem;
-  padding-left: var(--spacing-3);
-  padding-right: 1rem;
-  padding-right: var(--spacing-3);
-  max-width: 64rem;
-  max-width: var(--sizing-8);
-}
-
-@media (min-width: 48em) {
-  .container-not-centered {
-    padding-left: 2rem;
-    padding-left: var(--spacing-4);
-    padding-right: 2rem;
-    padding-right: var(--spacing-4);
-  }
-}
-
-@media (min-width: 62em) {
-  .container-not-centered {
-    padding-left: 4rem;
-    padding-left: var(--spacing-5);
-    padding-right: 4rem;
-    padding-right: var(--spacing-5);
-  }
-}
-
-@supports (display: grid) {
-  .container-not-centered {
-    max-width: 96rem;
-    max-width: var(--sizing-9);
-  }
-}
-
-.container-full {
-  padding-left: 1rem;
-  padding-left: var(--spacing-3);
-  padding-right: 1rem;
-  padding-right: var(--spacing-3);
-}
-
-@media (min-width: 48em) {
-  .container-full {
-    padding-left: 2rem;
-    padding-left: var(--spacing-4);
-    padding-right: 2rem;
-    padding-right: var(--spacing-4);
-  }
-}
-
-@media (min-width: 62em) {
-  .container-full {
-    padding-left: 4rem;
-    padding-left: var(--spacing-5);
-    padding-right: 4rem;
-    padding-right: var(--spacing-5);
-  }
-}
-
-/* 
- *
- * Filter Buttons
- *
- */
-
-.filter-btn {
-  margin-left: .5rem;
-  margin-left: var(--spacing-2);
-  margin-right: .5rem;
-  margin-right: var(--spacing-2);
-  font-size: 1.5rem;
-  font-size: var(--font-size-3);
-  color: #fff;
-  color: var(--white);
-  transition: all .2s ease-in-out;
-}
-
-.filter-btn:hover {
-  color: #ffd700;
-  color: var(--yellow);
-}
-
-/* 
- *
- * Headings
- *
- */
-
-.heading {
-  font-size: 2.25rem;
-  font-size: var(--font-size-2);
-  color: #000;
-  color: var(--black);
-}
-
-.subheading {
-  font-size: 1rem;
-  font-size: var(--font-size-5);
-  text-transform: uppercase;
-  letter-spacing: .1em;
-}
-
-/* 
- *
- * Icons
- *
- */
-
-.icon {
-  transition: all .2s ease-in-out;
-}
-
-.icon:hover {
-  color: #19a974;
-  color: var(--green);
-}
-
-.icon-on-green {
-  transition: all .2s ease-in-out;
-}
-
-.icon-on-green:hover {
-  color: #fff;
-  color: var(--white);
-  -webkit-filter: drop-shadow(0 15px 5px rgba(0, 0, 0, .11));
-          filter: drop-shadow(0 15px 5px rgba(0, 0, 0, .11));
-}
-
-/* 
- *
- * Inputs
- *
- */
-
-.input {
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-color: #eee;
-  border-color: var(--light-gray);
-  padding-bottom: .25rem;
-  padding-bottom: var(--spacing-1);
-  width: 100%;
-  font-family: 'Courier New', courier, monospace, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-}
-
-/* 
- *
- * Links
- *
- */
-
-.link {
-  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, .11), 0 5px 15px 0 rgba(0, 0, 0, .08);
-  border-width: .125rem;
-  border-width: var(--border-width-1);
-  border-color: #000;
-  border-color: var(--black);
-  background-color: #000;
-  background-color: var(--black);
-  padding-top: .5rem;
-  padding-top: var(--spacing-2);
-  padding-bottom: .5rem;
-  padding-bottom: var(--spacing-2);
-  padding-left: 1rem;
-  padding-left: var(--spacing-3);
-  padding-right: 1rem;
-  padding-right: var(--spacing-3);
-  line-height: 1.7;
-  text-transform: uppercase;
-  letter-spacing: .1em;
-  color: #fff;
-  color: var(--white);
-  transition: all .2s ease-in-out;
-  border-radius: 30px;
-}
-
-.link:hover {
-  border-color: #ff80cc;
-  border-color: var(--pink);
-  background-color: #ff80cc;
-  background-color: var(--pink);
-  color: #000;
-  color: var(--black);
-}
-
-.link-white:hover {
-  border-color: #fff;
-  border-color: var(--white);
-  background-color: #fff;
-  background-color: var(--white);
-  color: #000;
-  color: var(--black);
-}
-
-.link-inline {
-  transition: all .2s ease-in-out;
-  border-bottom: 1px solid #ff80cc;
-  border-bottom: 1px solid var(--pink);
-  box-shadow: inset 0 -2px 0 0 #ff80cc;
-  box-shadow: inset 0 -2px 0 0 var(--pink);
-}
-
-.link-inline:hover {
-  box-shadow: inset 0 -12px 0 0 #ff80cc;
-  box-shadow: inset 0 -12px 0 0 var(--pink);
-}
 
 /* These go with the arrows in components/examples/Arrows */
 
@@ -2412,6 +2083,29 @@ Classes to style the <Quote /> component
           transform: translateX(23px);
 }
 
+/*
+ *
+ * Blockquotes (classes to style the <Quote /> component)
+ *
+ */
+
+.quote {
+  max-width: 66ch;
+  line-height: 1.5;
+}
+
+.quote-source {
+  display: inline-flex;
+  padding-top: .5rem;
+  padding-top: var(--spacing-2);
+  font-style: normal;
+}
+
+.quote-link {
+  color: #357edd;
+  color: var(--blue);
+}
+
 /* These go with the burger in components/examples/BurgerAndOverlay */
 
 .burger {
@@ -2473,10 +2167,444 @@ Classes to style the <Quote /> component
 }
 
 /*
+
+Buttons & Filter Buttons
+
+*/
+
+.btn {
+  border-width: .125rem;
+  border-width: var(--border-width-1);
+  border-color: #000;
+  border-color: var(--black);
+  background-color: #000;
+  background-color: var(--black);
+  color: #ff80cc;
+  color: var(--pink);
+  padding-top: .5rem;
+  padding-top: var(--spacing-2);
+  padding-bottom: .5rem;
+  padding-bottom: var(--spacing-2);
+  padding-left: 1rem;
+  padding-left: var(--spacing-3);
+  padding-right: 1rem;
+  padding-right: var(--spacing-3);
+  line-height: 1;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  transition: all .2s ease-in-out;
+}
+
+.btn:hover {
+  background-color: #ff80cc;
+  background-color: var(--pink);
+  color: #000;
+  color: var(--black);
+}
+
+@media (min-width: 36em) {
+  .btn {
+    font-size: 1.25rem;
+    font-size: var(--font-size-4);
+  }
+}
+
+.filter-btn {
+  margin-left: .5rem;
+  margin-left: var(--spacing-2);
+  margin-right: .5rem;
+  margin-right: var(--spacing-2);
+  font-size: 1.5rem;
+  font-size: var(--font-size-3);
+  color: #fff;
+  color: var(--white);
+  transition: all .2s ease-in-out;
+}
+
+.filter-btn:hover {
+  color: #ffd700;
+  color: var(--yellow);
+}
+
+/*
+
+Containers
+
+*/
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-left: var(--spacing-3);
+  padding-right: 1rem;
+  padding-right: var(--spacing-3);
+  max-width: 64rem;
+  max-width: var(--sizing-8);
+}
+
+@media (min-width: 48em) {
+  .container {
+    padding-left: 2rem;
+    padding-left: var(--spacing-4);
+    padding-right: 2rem;
+    padding-right: var(--spacing-4);
+  }
+}
+
+@media (min-width: 62em) {
+  .container {
+    padding-left: 4rem;
+    padding-left: var(--spacing-5);
+    padding-right: 4rem;
+    padding-right: var(--spacing-5);
+  }
+}
+
+.container {
+  /*
+ @supports (display: grid) { @apply .mw9 }
+ */
+}
+
+.container-not-centered {
+  padding-left: 1rem;
+  padding-left: var(--spacing-3);
+  padding-right: 1rem;
+  padding-right: var(--spacing-3);
+  max-width: 64rem;
+  max-width: var(--sizing-8);
+}
+
+@media (min-width: 48em) {
+  .container-not-centered {
+    padding-left: 2rem;
+    padding-left: var(--spacing-4);
+    padding-right: 2rem;
+    padding-right: var(--spacing-4);
+  }
+}
+
+@media (min-width: 62em) {
+  .container-not-centered {
+    padding-left: 4rem;
+    padding-left: var(--spacing-5);
+    padding-right: 4rem;
+    padding-right: var(--spacing-5);
+  }
+}
+
+@supports (display: grid) {
+  .container-not-centered {
+    max-width: 96rem;
+    max-width: var(--sizing-9);
+  }
+}
+
+.container-full {
+  padding-left: 1rem;
+  padding-left: var(--spacing-3);
+  padding-right: 1rem;
+  padding-right: var(--spacing-3);
+}
+
+@media (min-width: 48em) {
+  .container-full {
+    padding-left: 2rem;
+    padding-left: var(--spacing-4);
+    padding-right: 2rem;
+    padding-right: var(--spacing-4);
+  }
+}
+
+@media (min-width: 62em) {
+  .container-full {
+    padding-left: 4rem;
+    padding-left: var(--spacing-5);
+    padding-right: 4rem;
+    padding-right: var(--spacing-5);
+  }
+}
+
+/* These animations go with floating items like Ball.js or react-shapes */
+
+.anim-vertical {
+  -webkit-animation: anim-vertical 7s ease-in-out infinite alternate;
+          animation: anim-vertical 7s ease-in-out infinite alternate;
+}
+
+.anim-horizontal {
+  -webkit-animation: anim-horizontal 11s ease-in-out infinite alternate;
+          animation: anim-horizontal 11s ease-in-out infinite alternate;
+}
+
+.anim-diagonal-right {
+  -webkit-animation: anim-diagonal-right 9s ease-in-out infinite alternate;
+          animation: anim-diagonal-right 9s ease-in-out infinite alternate;
+}
+
+.anim-diagonal-left {
+  -webkit-animation: anim-diagonal-left 8s ease-in-out infinite alternate;
+          animation: anim-diagonal-left 8s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes anim-vertical {
+  0% {
+    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
+            transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+
+  100% {
+    -webkit-transform: matrix(-1, 0, 0, -1, 0, -80);
+            transform: matrix(-1, 0, 0, -1, 0, -80);
+  }
+}
+
+@keyframes anim-vertical {
+  0% {
+    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
+            transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+
+  100% {
+    -webkit-transform: matrix(-1, 0, 0, -1, 0, -80);
+            transform: matrix(-1, 0, 0, -1, 0, -80);
+  }
+}
+
+@-webkit-keyframes anim-horizontal {
+  0% {
+    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
+            transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+
+  100% {
+    -webkit-transform: matrix(-1, 0, 0, -1, -80, 0);
+            transform: matrix(-1, 0, 0, -1, -80, 0);
+  }
+}
+
+@keyframes anim-horizontal {
+  0% {
+    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
+            transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+
+  100% {
+    -webkit-transform: matrix(-1, 0, 0, -1, -80, 0);
+            transform: matrix(-1, 0, 0, -1, -80, 0);
+  }
+}
+
+@-webkit-keyframes anim-diagonal-right {
+  0% {
+    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
+            transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+
+  100% {
+    -webkit-transform: matrix(-1, 0, 0, -1, 80, -80);
+            transform: matrix(-1, 0, 0, -1, 80, -80);
+  }
+}
+
+@keyframes anim-diagonal-right {
+  0% {
+    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
+            transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+
+  100% {
+    -webkit-transform: matrix(-1, 0, 0, -1, 80, -80);
+            transform: matrix(-1, 0, 0, -1, 80, -80);
+  }
+}
+
+@-webkit-keyframes anim-diagonal-left {
+  0% {
+    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
+            transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+
+  100% {
+    -webkit-transform: matrix(-1, 0, 0, -1, -80, -80);
+            transform: matrix(-1, 0, 0, -1, -80, -80);
+  }
+}
+
+@keyframes anim-diagonal-left {
+  0% {
+    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
+            transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+
+  100% {
+    -webkit-transform: matrix(-1, 0, 0, -1, -80, -80);
+            transform: matrix(-1, 0, 0, -1, -80, -80);
+  }
+}
+
+/* 
  *
- * Supports
+ * Animation Delay (needs to come after all compound animation declarations)
  *
  */
+
+.anim-delay-1 {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.anim-delay-2 {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+.anim-delay-3 {
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+.anim-delay-4 {
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+
+.anim-delay-5 {
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+/* 
+
+Headings
+
+*/
+
+.heading {
+  font-size: 2.25rem;
+  font-size: var(--font-size-2);
+  color: #000;
+  color: var(--black);
+}
+
+.subheading {
+  font-size: 1rem;
+  font-size: var(--font-size-5);
+  text-transform: uppercase;
+  letter-spacing: .1em;
+}
+
+/* 
+
+Icons
+
+*/
+
+.icon {
+  transition: all .2s ease-in-out;
+}
+
+.icon:hover {
+  color: #19a974;
+  color: var(--green);
+}
+
+.icon-on-green {
+  transition: all .2s ease-in-out;
+}
+
+.icon-on-green:hover {
+  color: #fff;
+  color: var(--white);
+  -webkit-filter: drop-shadow(0 15px 5px rgba(0, 0, 0, .11));
+          filter: drop-shadow(0 15px 5px rgba(0, 0, 0, .11));
+}
+
+/* 
+
+Inputs
+
+*/
+
+.input {
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-color: #eee;
+  border-color: var(--light-gray);
+  padding-bottom: .25rem;
+  padding-bottom: var(--spacing-1);
+  width: 100%;
+  font-family: 'Courier New', courier, monospace, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
+
+/* 
+ *
+ * Links
+ *
+ */
+
+.link {
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, .11), 0 5px 15px 0 rgba(0, 0, 0, .08);
+  border-width: .125rem;
+  border-width: var(--border-width-1);
+  border-color: #000;
+  border-color: var(--black);
+  background-color: #000;
+  background-color: var(--black);
+  padding-top: .5rem;
+  padding-top: var(--spacing-2);
+  padding-bottom: .5rem;
+  padding-bottom: var(--spacing-2);
+  padding-left: 1rem;
+  padding-left: var(--spacing-3);
+  padding-right: 1rem;
+  padding-right: var(--spacing-3);
+  line-height: 1.7;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  color: #fff;
+  color: var(--white);
+  transition: all .2s ease-in-out;
+  border-radius: 30px;
+}
+
+.link:hover {
+  border-color: #ff80cc;
+  border-color: var(--pink);
+  background-color: #ff80cc;
+  background-color: var(--pink);
+  color: #000;
+  color: var(--black);
+}
+
+.link-white:hover {
+  border-color: #fff;
+  border-color: var(--white);
+  background-color: #fff;
+  background-color: var(--white);
+  color: #000;
+  color: var(--black);
+}
+
+.link-inline {
+  transition: all .2s ease-in-out;
+  border-bottom: 1px solid #ff80cc;
+  border-bottom: 1px solid var(--pink);
+  box-shadow: inset 0 -2px 0 0 #ff80cc;
+  box-shadow: inset 0 -2px 0 0 var(--pink);
+}
+
+.link-inline:hover {
+  box-shadow: inset 0 -12px 0 0 #ff80cc;
+  box-shadow: inset 0 -12px 0 0 var(--pink);
+}
+
+/*
+
+Classes that rely on feature queries
+
+*/
 
 /* 
  * 
@@ -2526,10 +2654,10 @@ Classes to style the <Quote /> component
 }
 
 /*
- *
- * Utilities
- *
- */
+
+Utility classes
+
+*/
 
 /* Animations */
 
@@ -14958,6 +15086,25 @@ Adapted from: http://tachyons.io/docs/debug-grid/
 }
 
 /* @import './utilities/debug'; */
+
+/*
+ *
+ * Base
+ *
+ */
+
+/*
+@import './base/tailwind-preflight';
+@import './base/reset';
+@import './base/a11y';
+@import './base/font-face';
+*/
+
+/*
+ *
+ * Plugins (vendor + custom styles)
+ *
+ */
 
 @media (min-width: 36em) {
   .sm\:bg-fixed {
