--- a/src/styles/plugins/index.css
+++ b/src/styles/plugins/index.css
@@ -5,17 +5,17 @@
  */
 
 
-@import '../../node_modules/slick-carousel/slick/slick.css';
-@import './plugins/examples/react-slick';
+@import '../../../node_modules/slick-carousel/slick/slick.css';
+@import './examples/react-slick';
 
-@import '../../node_modules/flickity/dist/flickity.min.css';
-@import './plugins/examples/react-flickity-component';
+@import '../../../node_modules/flickity/dist/flickity.min.css';
+@import './examples/react-flickity-component';
 
-@import '../../node_modules/react-image-lightbox/style.css';
-@import './plugins/examples/react-image-lightbox'; 
+@import '../../../node_modules/react-image-lightbox/style.css';
+@import './examples/react-image-lightbox'; 
 
-@import './plugins/examples/react-modal';
+@import './examples/react-modal';
 /*
-@import './plugins/lightbox-react';
-@import './plugins/twitter-fetcher';
+@import './lightbox-react';
+@import './twitter-fetcher';
 */
